Add profileinfo method
